--- a/2-labbymezzage/labbystyle.css
+++ b/2-labbymezzage/labbystyle.css
@@ -1,7 +1,7 @@
 
 
 body {
-	background: url("pics/labbyGB.jpg");
+    background: #FF5900;
 	color: #444;
 	font-family: "Latha", "Georgia", "Helvetica",  sans-serif;
 }
@@ -18,10 +18,6 @@ p {
 }
 
 .content {
-	background-color: #612602;
-	border: 2px solid #612602;
-	border-radius: 20px;
-	width: 700px;
 	padding: 0 30px;
 	text-align: center;
 	margin: 4em auto;
@@ -62,7 +58,7 @@ footer p {
 	float: right;
 	margin-right: 20px;
 	font-size: 12px;
-	color: #FFFFFF;
+	color: #000000;
 }
 
 .MessageBoard .message{
@@ -76,7 +72,7 @@ footer p {
 	border-radius: 10px;
 	box-shadow: 0 0 0.5em #4e594b;
 	padding: 5px;
-	color: #FFFFFF;
+	color: #000000;
 	margin-top: 20px;
 }
 
@@ -84,7 +80,7 @@ footer p {
 	margin: 5px;
 	width: 410px;
 	float: left;
-	border-right: 1px solid #000;
+	border-right: 1px solid #000000;
 }
 
 .MessageBoard .message .messageDate{
@@ -108,7 +104,7 @@ textarea{
 	border-radius: 10px;
 	box-shadow: 0 0 1em #4e594b;
 	padding: 5px;
-	color: #000;
+	color: #000000;
 	font: 14px 'Helvetica', sans-serif;
 }
 
@@ -126,7 +122,7 @@ button {
 	float: right;
 	background: #612602;
 	border: 3px outset #853B00;
-	color: #e8f7e4;
+	color: #E8F7E4;
 }
 
 button:hover {
@@ -134,7 +130,7 @@ button:hover {
 }
 
 button:active {
-	border: 3px inset #687764;
+	border: 3px inset #853B00;
 }
 
 .right 
